--- a/courses/templates/courses/course/detail.html
+++ b/courses/templates/courses/course/detail.html
@@ -31,15 +31,15 @@
                                 <a class="nav-link active" id="tab--1" data-toggle="tab" href="#tab1" role="tab"
                                     aria-controls="tab1" aria-selected="false">Description</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item {% if object.id != 4 %} d-none  {% endif %}">
                                 <a class="nav-link" id="tab--2" data-toggle="tab" href="#tab2" role="tab"
                                     aria-controls="tab2" aria-selected="true">Learning Outcomes</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item {% if object.id != 4 %} d-none  {% endif %}">
                                 <a class="nav-link" id="tab--3" data-toggle="tab" href="#tab3" role="tab"
                                     aria-controls="tab3" aria-selected="true">Course Notes</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item {% if object.id != 4 %} d-none  {% endif %}">
                                 <a class="nav-link" id="tab--4" data-toggle="tab" href="#tab4" role="tab"
                                     aria-controls="tab4" aria-selected="true">Completion Requirements</a>
                             </li>
@@ -73,6 +73,7 @@
                                         <ul class="list-group">
                                             <li class="list-group-item">List supported scaffold types and its major
                                                 components</li>
+
                                             <li class="list-group-item">Identify the most common supported scaffold
                                                 safety hazards</li>
                                             <li class="list-group-item">Protect themselves from supported scaffold
@@ -159,8 +160,7 @@
                                         <p>Make-up time is not permitted for this training course. Should students miss
                                             any portion of the training, it is the student’s responsibility to contact
                                             NYCCST to arrange to attend another scheduled event.</p>
-                                        <p class="d-none"><a
-                                                href="#">Read
+                                        <p class="d-none"><a href="#">Read
                                                 NYCCST's full attendance and make-up time policies here.</a></p>
 
 
@@ -181,11 +181,11 @@
 
                     {% if request.user.is_authenticated %}
                     <div class="clearfix">
-                    <form action="{% url "student_enroll_course" %}" method="post">
-                        {{ enroll_form }}
-                        {% csrf_token %}
-                        <input type="submit" class="btn btn-success mb-30" value="Enroll now">
-                    </form>
+                        <form action="{% url "student_enroll_course" %}" method="post">
+                            {{ enroll_form }}
+                            {% csrf_token %}
+                            <input type="submit" class="btn btn-success mb-30" value="Enroll now">
+                        </form>
                     </div>
                     {% else %}
                     <a href="{% url "student_registration" %}" class="btn clever-btn mb-30">
@@ -280,8 +280,6 @@
         color: #fff !important;
         border: 1px solid #000;
     }
-
-    
 </style>
 
 {% endblock %}
