--- a/courses/templates/courses/course/detail.html
+++ b/courses/templates/courses/course/detail.html
@@ -194,7 +194,7 @@
                     {% endif %}
 
 
-                    <div class="sidebar-widget">
+                    <div class="sidebar-widget d-none">
                         <h5> Instructor</h5>
                         <ul class="features-list">
                             <li>
