--- a/courses/templates/courses/course/detail.html
+++ b/courses/templates/courses/course/detail.html
@@ -71,19 +71,36 @@
                                         </h4>
 
                                         <ul class="list-group">
-                                            <li class="list-group-item">List supported scaffold types and its major
-                                                components</li>
+                                            <li class="list-group-item">
+                                                By the end of the learning module, participants will
+                                                identify/differentiate between different types of supported scaffolds
+                                            </li>
 
-                                            <li class="list-group-item">Identify the most common supported scaffold
-                                                safety hazards</li>
-                                            <li class="list-group-item">Protect themselves from supported scaffold
-                                                safety hazards</li>
+                                            <li class="list-group-item">
+                                                By the end of the learning module, participants will have known hazards
+                                                related to improper supported scaffolds use accidents
+                                            </li>
+                                            <li class="list-group-item">
+                                                By the end of the learning module, participants will become familiar
+                                                with 1926 OSHA Overview -Safety and Health Regulations for Construction
+                                            </li>
                                             <li class="list-group-item">Outline New York City Building Code supported
                                                 scaffold safety
                                                 requirements</li>
-                                            <li class="list-group-item">Inspect supported scaffolds in accordance with
-                                                federal and local safety
-                                                regulations</li>
+                                            <li class="list-group-item">
+                                                By the end of the learning module, participants will identify Personal
+                                                Protected Equipment related to Life-Saving Equipment
+
+                                            </li>
+
+                                           <li class="list-group-item">
+                                            Protect themselves from supported scaffold safety hazards
+                                            </li>
+
+                                             <li class="list-group-item">
+                                            Inspect supported scaffolds in accordance with federal and local safety regulations
+                                            </li>
+
                                         </ul>
 
 
