--- a/courses/templates/courses/course/detail.html
+++ b/courses/templates/courses/course/detail.html
@@ -93,12 +93,13 @@
 
                                             </li>
 
-                                           <li class="list-group-item">
-                                            Protect themselves from supported scaffold safety hazards
+                                            <li class="list-group-item">
+                                                Protect themselves from supported scaffold safety hazards
                                             </li>
 
-                                             <li class="list-group-item">
-                                            Inspect supported scaffolds in accordance with federal and local safety regulations
+                                            <li class="list-group-item">
+                                                Inspect supported scaffolds in accordance with federal and local safety
+                                                regulations
                                             </li>
 
                                         </ul>
@@ -122,37 +123,45 @@
                                             <h4>CEU Requirements</h4>
 
                                             <ul class="list-group">
-                                                <li class="list-group-item">100% attendance for the course<u></u><u></u>
+                                                <li class="list-group-item">
+                                                    100% appearance for the course
                                                 </li>
+                                                <li class="list-group-item">
+                                                    Fully involvement in all class trainings (determined by instructor)
+                                                </li>
+
                                                 <li class="list-group-item">Completion of Continuing Education and
                                                     Training Registration
-                                                    Form<u></u><u></u></li>
-                                                <li class="list-group-item">Active participation in all class exercises
-                                                    (determined by course
-                                                    instructor)<u></u><u></u></li>
-                                                <li class="list-group-item">Completion of required pre-and post-quiz
-                                                    assessment<u></u><u></u>
+                                                    Form</li>
+
+                                                <li class="list-group-item">Completion of mandatory quiz assessments
                                                 </li>
-                                                <li class="list-group-item">As applicable, achievement of minimum
-                                                    passing score on required
-                                                    end-of-course examination<u></u><u></u></li>
+
+                                                <li class="list-group-item">As applicable, attainment of least passing
+                                                    score on required end-of-course examination</li>
+
                                                 <li class="list-group-item">Participation and submittal of end-of-course
-                                                    evaluation form (must
-                                                    provide name on form to receive credit)</li>
+                                                    assessment form (must provide name on form to obtain credit)</li>
                                             </ul>
 
                                             <h4 class="mt-3">Prerequisites</h4>
-                                            <p>There are no prerequisites needed to attend this course. Students must be
-                                                able to verbally communicate with instructor in primary language of the
-                                                training.</p>
+                                            <p>
+                                                There are no preconditions compulsory to appear in this course. Students
+                                                must be able to orally communicate with instructor in primary language
+                                                of the training.
+                                            </p>
                                             <h4>Training Requirements for&nbsp;4 Hour Supported Scaffold User &amp;
                                                 Refresher Course</h4>
-                                            <p>As per Local Law 52 of 2005, this course is required for workers using
-                                                supported scaffolds on construction sites in New York City. This
-                                                training is required every 4 years.</p>
+                                            <p>This course is requisite for workers using supported scaffolds on
+                                                construction places in New York City. This training is required every 4
+                                                years.
+                                                (As per Local Law 52 of 2005).
+                                                </p>
                                             <h4>Audience</h4>
-                                            <p>Any individual who needs to use or work on a Supported Scaffold in New
-                                                York City.</p>
+                                            <p>
+                                                Any individual, who needs to practice or work on a Supported Scaffold in
+                                                New York City
+                                            </p>
                                         </div>
 
 
